--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Template</title>
+    <title>Quotes</title>
   </head>
   <body>
     <i class="fas fa-globe"></i>
