--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,11 +10,24 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-
-    <title>Quotes</title>
+    <title>Advices</title>
   </head>
   <body>
-    <i class="fas fa-globe"></i>
+    <div class="container" id="container">
+      <div class="text">
+        <i class="fas fa-paragraph"></i>
+        <span id="advice"
+          >Never let your Mother cut your hair.Never let your Mother cut your
+          hair.Never let your Mother cut your hair.</span
+        >
+      </div>
+      <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet Me!">
+          <i class="fab fa-twitter-square"></i>
+        </button>
+        <button id="new-advice">New Advice</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
