--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
       <div class="text">
         <i class="fas fa-paragraph"></i>
         <span id="advice"
-          >Never let your Mother cut your hair.Never let your Mother cut your
-          hair.Never let your Mother cut your hair.</span
+          >"Never let your Mother cut your hair.Never let your Mother cut your
+          hair.Never let your Mother cut your hair."</span
         >
+      </div>
+      <div class="advice-author">
+        <span id="author">Andrei</span>
       </div>
       <div class="button-container">
         <button class="twitter-button" id="twitter" title="Tweet Me!">
