Deleting directly entered dummy data.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
     <div class="container" id="container">
       <div class="text">
         <i class="fas fa-paragraph"></i>
-        <span id="advice"
-          >"Never let your Mother cut your hair.Never let your Mother cut your
-          hair.Never let your Mother cut your hair."</span
-        >
+        <span id="advice"></span>
       </div>
       <div class="advice-author">
-        <span id="author">Andrei</span>
+        <span id="author"></span>
       </div>
       <div class="button-container">
         <button class="twitter-button" id="twitter" title="Tweet Me!">
