--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
   </head>
   <body>
     <div class="container" id="container">
-      <div class="text">
-        <i class="fas fa-paragraph"></i>
-        <span id="advice"></span>
+      <div class="loader" id="loader">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
-      <div class="advice-author">
-        <span id="author"></span>
+      <div id="text-wrapper">
+        <div class="text" id="text">
+          <i class="fas fa-paragraph"></i>
+          <span id="advice"></span>
+        </div>
+        <div class="advice-author">
+          <span id="author"></span>
+        </div>
       </div>
       <div class="button-container">
         <button class="twitter-button" id="twitter" title="Tweet Me!">
